syntax = "proto3";

package logstream;

import "api/logstream/messages.proto";

option go_package = "logstream/pkg/api/logstream;logstream";

service LogsService {
  // SaveLog - save log
  rpc SaveLog(SaveLogRequest) returns (SaveLogResponse);

  // SaveLogStream - save logs in stream
  rpc SaveLogStream(stream SaveLogRequest) returns (stream SaveLogResponse);

  // ListLog - list log
  rpc ListLog(ListLogRequest) returns (ListLogResponse);

  // ListLog - list log in stream
  rpc ListLogStream(stream ListLogRequest) returns (stream ListLogResponse);

  // ListLogs - list logs
  rpc ListLogs(ListLogsRequest) returns (ListLogsResponse);

  // ListLogsStream - list logs in stream
  rpc ListLogsStream(ListLogsStreamRequest) returns (stream ListLogsStreamResponse);
}